--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ng": "node_modules\\.bin\\ng"
+    "ng": "node_modules\\.bin\\ng",
+    "deploy": "ng deploy --base-href=/"
   },
   "private": true,
   "dependencies": {
