--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -23,9 +23,15 @@ jobs:
       run: |
         npm install
         npm run-script deploy
+    - name: Checking
+      run: |
+        echo "--------------Checking Began-------------------"
+        ls
+        echo "--------------Checking End-------------------"
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
-        FOLDER: dist/crawler-front
+        # FOLDER: dist/crawler-front
+        FOLDER: dist/
